Fixed Footer-Sidebar, updated functions.php to remove outdated jQuery script. Added style

--- a/style.css
+++ b/style.css
@@ -57,3 +57,21 @@ h1 {
 	font-size: 1.25rem;
 	margin-bottom: 0.75rem;
 }
+
+/**
+ * Footer Styles
+ */
+ footer{
+	background-color: #ccc;
+	color: #333;
+	margin-top: 2rem;
+	padding: 1rem 0;
+}
+
+footer .container {
+	background-color: #aaa;
+}
+
+footer .widget {
+	background-color: #eee;
+}
